-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.3.0-beta1
-
Ubuntu 16.04, macOS 10.12
Steps to reproduce:
- open/create small project
- trigger 'Find in This Directory' on the context menu of the project's root node
Current result:
- infinite loop [spinning ball of death on OSX]
For Gerrit Dashboard: QTCREATORBUG-17927 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
189900,3 | Guard against infinite loop in pathOrDirectoryFor(Node*,bool) | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |