Guard against infinite loop in pathOrDirectoryFor(Node*,bool)

QFileInfo::absolutePath prints a warning and returns an empty string, if
given an empty string for the file path.

Task-number: QTCREATORBUG-17927
Change-Id: Ie49fc1500937c00ba579281785435e57464639ae
Reviewed-by: hjk <hjk@qt.io>